# agentic-ai

./: .env.example  .env.production  .gitignore  CRM_INTEGRATION_GUIDE.md  DEPLOY_TO_RENDER.md  Makefile  PROJECT_STRUCTURE.md  README.md  RENDER_TROUBLESHOOTING.md  check_env.py  dev.bat  dev.ps1  manage.py  package.json  pyproject.toml  render.yaml  requirements-dev.txt  requirements-final.txt  requirements-hybrid.txt  requirements-langchain.txt  requirements-minimal.txt  requirements-prod.txt  requirements-production.txt  requirements-ultra-minimal.txt  requirements.txt  setup.ps1  system_status.py  test_api.py  test_api_endpoints.py  test_imports.py  test_status.py  test_status_endpoint.py
.github/: copilot-instructions.md
api/: auth.py  main.py
api/routes/: __init__.py  agent.py  testing.py  webhooks.py  workflows.py
api/schemas/: __init__.py  requests.py  responses.py
config/: __init__.py  settings.py
core/agents/: operations_agent.py  quote_agent.py  sales_agent.py  scheduler_agent.py
core/engine/: __init__.py  core_agent.py  core_agent_simple.py
deployment/: Dockerfile  docker-compose.yml
docs/: GROQ_MIGRATION.md  README_v2.md  structure.md
examples/: demo.py  usage_examples.py
integrations/: __init__.py  telegram_integration.py  web_chat_integration.py  whatsapp_integration.py
scripts/: dev.py  interactive_chat.py  start.bat  start.py  start.sh  start_v2.bat  start_v2.sh  test_groq.py  test_groq_api.py  verify_groq.py
static/: api.html  dashboard.html  docs.html  index.html
tests/: test_basic.py
tools/: agent_tools.py  base_tool.py  crm_tools.py  operations_tools.py  quote_tools.py  sales_tools.py  scheduler_tools.py
workflows/: __init__.py  automation.py  base_workflow.py  examples.py
