[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-agent-crm"
version = "1.0.0"
description = "Multi-agent AI CRM system with LangChain and FastAPI"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
keywords = ["ai", "agent", "crm", "langchain", "fastapi", "groq"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "langchain==0.1.20",
    "langchain-community==0.0.38",
    "groq==0.4.1",
    "pydantic==2.7.4",
    "pydantic-settings==2.3.4",
    "python-dotenv==1.0.1",
    "fastapi==0.108.0",
    "uvicorn==0.25.0",
    "websockets==12.0",
    "python-telegram-bot==20.7",
    "twilio==8.12.0",
    "requests==2.31.0",
    "celery==5.3.4",
    "redis==5.0.1",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "structlog==23.2.0",
    "prometheus-client==0.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "pytest-mock==3.14.1",
    "httpx==0.26.0",
    "black==23.12.1",
    "flake8==7.0.0",
    "pre-commit==3.6.0",
]

[project.urls]
Homepage = "https://github.com/aaryyang/agentic-ai"
Repository = "https://github.com/aaryyang/agentic-ai.git"
Documentation = "https://github.com/aaryyang/agentic-ai#readme"
Issues = "https://github.com/aaryyang/agentic-ai/issues"

[project.scripts]
ai-agent-dev = "scripts.dev:main"
ai-agent-start = "scripts.start:main"
ai-agent-chat = "scripts.interactive_chat:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["api*", "core*", "config*", "integrations*", "tools*", "workflows*", "scripts*"]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
